k8deploy/app-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trendtrove-app-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trendtrove-app-v3
  template:
    metadata:
      labels:
        app: trendtrove-app-v3
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: app
          image: us-central1-docker.pkg.dev/canaryguard-bda/canaryguard/trendtrove-app:v3
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-service-v3
  labels:
    app: trendtrove-app-v3
spec:
  selector:
    app: trendtrove-app-v3
  ports:
    - name: http
      port: 3000
      targetPort: 3000
