k8deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trendtrove-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trendtrove-app
  template:
    metadata:
      labels:
        app: trendtrove-app
    spec:
      containers:
        - name: app
          image: trendtrove-app:local
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: trendtrove-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
