k8deploy/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trendtrove-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trendtrove-auth
  template:
    metadata:
      labels:
        app: trendtrove-auth
    spec:
      containers:
        - name: auth
          image: us-central1-docker.pkg.dev/canaryguard-bda/canaryguard/trendtrove-auth:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: trendtrove-auth
  ports:
    - name: http
      port: 3000
      targetPort: 3000
