k8deploy/ingress-canary-v3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trendtrove-canary-v3
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: 34.122.199.244.nip.io
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: app-service-v3
                port:
                  number: 3000
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: app-service-v3
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service-v3
                port:
                  number: 3000
